# albitraje

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_PLAN.md  README.md  create_vm.sh  docker-compose.yml  setup_vm.sh
.agent/skills/brainstorming/: SKILL.md
.agent/skills/crear-skill/: SKILL.md
.agent/skills/gestionar-devops/: SKILL.md
.agent/skills/gestionar-devops/references/: cicd_pipeline_guide.md  deployment_strategies.md
.agent/skills/gestionar-devops/scripts/: pipeline_generator.py
.agent/skills/git-commit-helper/: SKILL.md
.agent/skills/git-commit-helper/scripts/: analyze_diff.sh
.agent/skills/manejar-errores/: SKILL.md
.agent/skills/manejar-errores/assets/: error-message-guide.md
.agent/skills/manejar-errores/references/: error-recovery-strategies.md  exception-hierarchy-design.md
.agent/skills/planificacion/: SKILL.md
.github/workflows/: deploy.yml
engine/: Dockerfile  main.py  pyproject.toml  requirements.txt
ingestor/: Dockerfile  index.js  index.ts  package-lock.json  package.json  tsconfig.json
web/: Dockerfile  astro.config.mjs  package-lock.json  package.json
web/src/components/: SignalMonitor.jsx  SignalMonitor.tsx
web/src/pages/: index.astro
web/src/styles/: global.css
