[project]
name = "albitraje-engine"
version = "0.1.0"
description = "Arbitrage High-Frequency Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvloop>=0.19.0",
    "pyzmq>=25.1.2",
    "redis>=5.0.1",
    "orjson>=3.9.10",
    "colorama>=0.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
